[gd_scene load_steps=10 format=2]

[ext_resource path="res://freesansbold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOverS.gd" type="Script" id=2]
[ext_resource path="res://music/win.wav" type="AudioStream" id=3]
[ext_resource path="res://music/lose.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0862745, 0.145098, 0.207843, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[node name="GameOverS" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="loseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="winSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 710.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 660.0
custom_constants/separation = 150

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Fim de fase"
align = 1

[node name="msg" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 250.0
margin_right = 924.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 3 )
text = "Descrição"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 430.0
margin_right = 924.0
margin_bottom = 592.0
custom_constants/separation = 50

[node name="Next" type="Button" parent="PanelContainer/MarginContainer/Rows/VBoxContainer"]
margin_right = 924.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "Proximo nivel"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Rows/VBoxContainer"]
margin_top = 106.0
margin_right = 924.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 5 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/VBoxContainer/Next" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
